display key info when key is pressed

--- a/index.html
+++ b/index.html
@@ -12,5 +12,20 @@
 </head>
 <body>
     <h1>Event Key Code</h1>
+    <h2>Press any Key</h2>
+    <main>
+      <div>
+        <h3>Key</h3>
+        <p id="key"></p>
+      </div>
+      <div>
+        <h3>Code</h3>
+        <p id="code"></p>
+      </div>
+      <div>
+        <h3>Key Code</h3>
+        <p id="key-code"></p>
+      </div>
+    </main>
 </body>
 </html>
